--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <img src="user.jpg" alt="Sandhra Mary" class="about-img" />
       <div class="about-text">
         <h2 class="hand">About Me</h2>
-        <p>
+        <p class="hand2">
           I’m Sandhra Mary, a visual storyteller exploring creativity across
           film, comics, photography, and character design. My sketchbook is a
           living space for imagination — every frame, every line, and every shot
