--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
     <h2 class="hand">Contact</h2>
     <p>Let’s collaborate or just say hello!</p>
     <div class="contact-links">
-      <a href="mailto:sandhra.mary@email.com" class="contact-btn">Email</a>
-      <a href="https://www.instagram.com" target="_blank" class="contact-btn">Instagram</a>
-      <a href="https://www.behance.net" target="_blank" class="contact-btn">Behance</a>
+      <a href="mailto:mary.sandhra799@gmail.com" class="contact-btn">Email</a>
+      <a href="https://www.instagram.com/san_maryyy?igsh=c3h4cDFvMGEzb3Fy" target="_blank" class="contact-btn">Instagram</a>
+      <a href="https://www.behance.net/sandhramary" target="_blank" class="contact-btn">Behance</a>
+	  <a href="https://www.linkedin.com/in/sandhra-mary/" target="_blank" class="contact-btn">Linkedin</a>
     </div>
   </section>
 
